Corrected boo boo with alignment in table headers

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -18,6 +18,10 @@
     font-weight: bold;
 }
 
+th {
+    text-align: left;
+}
+
 .m-body-table {
     width: 100%;
 }
